syntax = "proto3";

package authpb;

option go_package = "pb/";

message IntrospectReq {
  string access_token = 1;
}

message IntrospectResp {
  string tid = 1;
  string sub = 2;
}

service AuthService {
    rpc IntrospectToken(IntrospectReq) returns (IntrospectResp);
}

// make auth_proto
// cd proto && protoc -I . --go_out gen --go_opt paths=source_relative --go-grpc_out gen --go-grpc_opt paths=source_relative,require_unimplemented_servers=false auth.proto && cd ..